fixed extra margins, move pagination

--- a/src/app/components/news/news.component.scss
+++ b/src/app/components/news/news.component.scss
@@ -7,19 +7,23 @@ h2 {
   color: #b49864;
   padding-top: 80px;
   margin-bottom: 64px;
+  text-align: center;
 }
 
 .news_container {
   background-color: #0e0c08;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .news_wrapper {
-  width: 1504px;
+  max-width: 1504px;
+  margin: 0 auto;
   border-bottom: .5px solid #323232;
-  margin-bottom: 35px;
+}
+
+.pagination {
+  width: 300px;
+  padding-top: 35px;
+  padding-bottom: 117px;
+  margin: 0 0 0 auto;
 }
 
